--- a/index.html
+++ b/index.html
@@ -11,20 +11,230 @@
   <meta name="description" content="Website of Boilerplate">
   <meta name="keywords" content="Keywords">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="css/foundation.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="shortcut icon" href="images/logo.png">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
   <div class="wrapper">
-    <nav class="nav">
+    <nav class="nav dc-nav">
     </nav>
-    <div class="jumbotron">
+    <div class="section dc-section dc-hero">
       <div class="container">
-        <h1>Boilerplate for static sites</h1>
+        <div class="row">
+          <div class="col-sm-8 col-md-6 dc-hero--content">
+            <h1>UC San Diego Design Conference</h1>
+
+            <div class="dc-hero--description">
+              <h4>May 20, 2017</h4>
+              <h4>UCSD Price Center Theater</h4>
+            </div>
+
+            <a class="btn btn-primary dc-btn">Register Now</a>
+          </div>
+
+        </div>
+
       </div>
     </div>
+
+    <div class="section dc-section">
+      <div class="container">
+        <div class="row text-center">
+          <h2 class="dc-section--header">Speakers</h2>
+        </div>
+
+        <div class="row text-center">
+          <div class="dc-card--wrapper col-md-4">
+            <div class="dc-card">
+              <img class="dc-card--img" src="images/temporary.png" />
+              <div class="dc-card--body card-body">
+                <h3>Michael Meyer</h3>
+                <p>Powerful web interactions and animations</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="dc-card--wrapper col-md-4">
+            <div class="dc-card">
+              <img class="dc-card--img" src="images/temporary.png" />
+              <div class="dc-card--body card-body">
+                <h3>Michael Meyer</h3>
+                <p>Powerful web interactions and animations</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="dc-card--wrapper col-md-4">
+            <div class="dc-card">
+              <img class="dc-card--img" src="images/temporary.png" />
+              <div class="dc-card--body card-body">
+                <h3>Michael Meyer</h3>
+                <p>Powerful web interactions and animations</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+    <div class="section dc-section">
+      <div class="dc-featurette--left"><img src="images/phones1.png" /></div>
+      <div class="container">
+        <div class="row text-center">
+          <h2 class="dc-section--header">Schedule</h2>
+        </div>
+
+        <div class="row dc-schedule">
+          <div class="col-sm-4 text-right">
+            <h4>9:30 AM</h4>
+          </div>
+          <div class="col-sm-8">
+            <h4>Breakfast</h4>
+            <p>Powerful web interactions and animations</p>
+          </div>
+        </div>
+        <div class="row dc-schedule">
+          <div class="col-sm-4 text-right">
+            <h4>9:30 AM</h4>
+          </div>
+          <div class="col-sm-8">
+            <h4>Breakfast</h4>
+            <p>Powerful web interactions and animations</p>
+          </div>
+        </div>
+        <div class="row dc-schedule">
+          <div class="col-sm-4 text-right">
+            <h4>9:30 AM</h4>
+          </div>
+          <div class="col-sm-8">
+            <h4>Breakfast</h4>
+            <p>Powerful web interactions and animations</p>
+          </div>
+        </div>
+
+        <div class="row text-center dc-section--button">
+          <button class="dc-btn btn btn-primary">View Full Schedule</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="section dc-section">
+      <div class="dc-featurette--right"><img src="images/phones2.png" /></div>
+
+      <div class="container">
+        <div class="row text-center">
+          <h2 class="dc-section--header">Sponsor Us</h2>
+        </div>
+
+        <div class="row text-center">
+
+         
+          <div class="dc-card--wrapper col-md-4">
+            <div class="dc-card">
+              <img class="dc-card--img" src="images/temporary.png" />
+              <div class="dc-card--body card-body">
+                <h3>Network</h3>
+                <p>Powerful web interactions and animations</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="dc-card--wrapper col-md-4">
+            <div class="dc-card">
+              <img class="dc-card--img" src="images/temporary.png" />
+              <div class="dc-card--body card-body">
+                <h3>Network</h3>
+                <p>Powerful web interactions and animations</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="dc-card--wrapper col-md-4">
+            <div class="dc-card">
+              <img class="dc-card--img" src="images/temporary.png" />
+              <div class="dc-card--body card-body">
+                <h3>Network</h3>
+                <p>Powerful web interactions and animations</p>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+
+        <div class="row text-center dc-section--button">
+          <button class="dc-btn btn btn-primary">View Sponsorship Tiers</button>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="section dc-section dc-faq">
+      <div class="dc-featurette--left"><img src="images/phones1.png" /></div>
+
+      <div class="container">
+        <div class="row text-center">
+          <h2 class="dc-section--header">FAQ</h2>
+        </div>
+
+        <div class="row dc-faq--table">
+          <div class="col-sm-6 dc-faq--section">
+            <h4>Why did the chicken cross the road?</h4>
+            <div class="dc-faq--text">
+              <p>Powerful web interactions and animations. A redesigned more intuitive timeline. Join us at this design conference.</p>
+            </div>
+          </div>
+          <div class="col-sm-6 dc-faq--section">
+            <h4>Why did the chicken cross the road?</h4>
+            <div class="dc-faq--text">
+              <p>Powerful web interactions and animations. A redesigned more intuitive timeline. Join us at this design conference.</p>
+            </div>
+          </div>
+          <div class="col-sm-6 dc-faq--section">
+            <h4>Why did the chicken cross the road?</h4>
+            <div class="dc-faq--text">
+              <p>Powerful web interactions and animations. A redesigned more intuitive timeline. Join us at this design conference.</p>
+            </div>
+          </div>
+          <div class="col-sm-6 dc-faq--section">
+            <h4>Why did the chicken cross the road?</h4>
+            <div class="dc-faq--text">
+              <p>Powerful web interactions and animations. A redesigned more intuitive timeline. Join us at this design conference.</p>
+            </div>
+          </div>
+          <div class="col-sm-6 dc-faq--section">
+            <h4>Why did the chicken cross the road?</h4>
+            <div class="dc-faq--text">
+              <p>Powerful web interactions and animations. A redesigned more intuitive timeline. Join us at this design conference.</p>
+            </div>
+          </div>
+          <div class="col-sm-6 dc-faq--section">
+            <h4>Why did the chicken cross the road?</h4>
+            <div class="dc-faq--text">
+              <p>Powerful web interactions and animations. A redesigned more intuitive timeline. Join us at this design conference.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="section dc-section">
+      <div class="container text-right">
+        <h2 class="dc-section--header">Register Now</h2>
+
+        <div class="row dc-cta">
+          <h1>UC San Diego Design Conference</h1>
+          <h4>May 20, 2017</h4>
+          <h4>UCSD Price Center Theater</h4>
+
+          <button class="btn btn-primary dc-btn">Register Now</button>
+        </div>
+
     <footer class="footer">
     </footer>
   </div>
