--- a/index.html
+++ b/index.html
@@ -21,21 +21,25 @@
     <nav class="nav dc-nav">
     </nav>
     <div class="section dc-section dc-hero">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8 col-md-6 dc-hero--content">
-            <h1>UC San Diego Design Conference</h1>
+      <div class="dc-hero--bg">
+        <img src="images/background.png" />
+      </div>
+      <div class="dc-hero--content-wrapper">
+        <div class="container dc-hero--content">
+          <div class="row">
+            <div class="col-sm-8 col-md-6 dc-hero--content">
+              <h1>UC San Diego Design Conference</h1>
 
-            <div class="dc-hero--description">
-              <h4>May 20, 2017</h4>
-              <h4>UCSD Price Center Theater</h4>
+              <div class="dc-hero--description">
+                <h4>May 20, 2017</h4>
+                <h4>UCSD Price Center Theater</h4>
+              </div>
+
+              <a class="btn btn-primary dc-btn">Register Now</a>
             </div>
 
-            <a class="btn btn-primary dc-btn">Register Now</a>
           </div>
-
         </div>
-
       </div>
     </div>
 
@@ -117,7 +121,7 @@
         </div>
 
         <div class="row text-center dc-section--button">
-          <button class="dc-btn btn btn-primary">View Full Schedule</button>
+          <a class="dc-btn btn btn-primary">View Full Schedule</a>
         </div>
       </div>
     </div>
@@ -167,7 +171,7 @@
         </div>
 
         <div class="row text-center dc-section--button">
-          <button class="dc-btn btn btn-primary">View Sponsorship Tiers</button>
+          <a class="dc-btn btn btn-primary">View Sponsorship Tiers</a>
         </div>
       </div>
     </div>
@@ -222,21 +226,41 @@
       </div>
     </div>
 
-
-    <div class="section dc-section">
-      <div class="container text-right">
+    <div class="section dc-section dc-section--bottom">
+      <div class="dc-section--bottom-bg">
+        <img src="images/background-bottom.png" />
+        <footer class="footer dc-footer">
+          <div class="dc-footer--presented">
+            <div class="row text-center">
+              <h4>Presented by:</h4>
+            </div>
+            <div class="row dc-footer--images text-center">
+              <a id="logo-designatucsd-link" href="http://designatucsd.org" target="_blank">
+                <img id="logo-designatucsd" src="images/designatucsd_logo.png" />
+              </a>
+              <a id="logo-dsp-link" href="http://www.ucsddsp.com/" target="_blank">
+                <img id="logo-dsp" src="images/dsp_logo.png" />
+              </a>
+            </div>
+          </div>
+        </footer>
+      </div>
+      <div class="container text-right dc-cta">
         <h2 class="dc-section--header">Register Now</h2>
 
-        <div class="row dc-cta">
-          <h1>UC San Diego Design Conference</h1>
-          <h4>May 20, 2017</h4>
-          <h4>UCSD Price Center Theater</h4>
+        <div class="row">
+          <div class="col-sm-8 col-md-6 col-sm-offset-4 col-md-offset-6">
 
-          <button class="btn btn-primary dc-btn">Register Now</button>
+            <div class="dc-hero--description">
+              <h4>May 20, 2017</h4>
+              <h4>UCSD Price Center Theater</h4>
+            </div>
+
+            <a class="btn btn-primary dc-btn">Register Now</a>
+          </div>
         </div>
-
-    <footer class="footer">
-    </footer>
+      </div>
+    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
