--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <html lang="en">
-<head>  
+<head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Boilerplate">
   <meta property="og:description" content="Website of Boilerplate">
@@ -55,7 +55,7 @@
               <img class="dc-card--img" src="images/temporary.png" />
               <div class="dc-card--body card-body">
                 <h3>Michael Meyer</h3>
-                <p>Powerful web interactions and animations</p>
+                <p>Keynote Speaker</p>
               </div>
             </div>
           </div>
@@ -64,8 +64,8 @@
             <div class="dc-card">
               <img class="dc-card--img" src="images/temporary.png" />
               <div class="dc-card--body card-body">
-                <h3>Michael Meyer</h3>
-                <p>Powerful web interactions and animations</p>
+                <h3>Neema Mandavi</h3>
+                <p>Panelist, Workshop Leader</p>
               </div>
             </div>
           </div>
@@ -74,8 +74,38 @@
             <div class="dc-card">
               <img class="dc-card--img" src="images/temporary.png" />
               <div class="dc-card--body card-body">
-                <h3>Michael Meyer</h3>
-                <p>Powerful web interactions and animations</p>
+                <h3>Nastasha Tan</h3>
+                <p>Panelist, Workshop Leader</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="dc-card--wrapper col-md-4">
+            <div class="dc-card">
+              <img class="dc-card--img" src="images/temporary.png" />
+              <div class="dc-card--body card-body">
+                <h3>Sharon Charmichael</h3>
+                <p>Panelist</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="dc-card--wrapper col-md-4">
+            <div class="dc-card">
+              <img class="dc-card--img" src="images/temporary.png" />
+              <div class="dc-card--body card-body">
+                <h3>Sharon Charmichael</h3>
+                <p>Panelist</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="dc-card--wrapper col-md-4">
+            <div class="dc-card">
+              <img class="dc-card--img" src="images/temporary.png" />
+              <div class="dc-card--body card-body">
+                <h3>Sharon Charmichael</h3>
+                <p>Panelist</p>
               </div>
             </div>
           </div>
@@ -94,29 +124,74 @@
 
         <div class="row dc-schedule">
           <div class="col-sm-4 text-right">
-            <h4>9:30 AM</h4>
+            <h4>9:00 AM</h4>
           </div>
           <div class="col-sm-8">
-            <h4>Breakfast</h4>
-            <p>Powerful web interactions and animations</p>
+            <h4>Light Refreshments & Networking Session</h4>
+            <p>Price Center Theater Lobby</p>
           </div>
         </div>
         <div class="row dc-schedule">
           <div class="col-sm-4 text-right">
-            <h4>9:30 AM</h4>
+            <h4>10:00 AM</h4>
           </div>
           <div class="col-sm-8">
-            <h4>Breakfast</h4>
-            <p>Powerful web interactions and animations</p>
+            <h4>Keynote - Michael Meyer</h4>
+            <p>Price Center Theater</p>
           </div>
         </div>
         <div class="row dc-schedule">
           <div class="col-sm-4 text-right">
-            <h4>9:30 AM</h4>
+            <h4>11:00 AM</h4>
           </div>
           <div class="col-sm-8">
-            <h4>Breakfast</h4>
-            <p>Powerful web interactions and animations</p>
+            <h4>Panel Discussion</h4>
+            <p>Price Center Theater</p>
+          </div>
+        </div>
+        <div class="row dc-schedule">
+          <div class="col-sm-4 text-right">
+            <h4>12:00 PM</h4>
+          </div>
+          <div class="col-sm-8">
+            <h4>Lunch</h4>
+            <p>Price Center Theater</p>
+          </div>
+        </div>
+        <div class="row dc-schedule">
+          <div class="col-sm-4 text-right">
+            <h4>1:00 PM</h4>
+          </div>
+          <div class="col-sm-8">
+            <h4>Workshop Session 1</h4>
+            <p>Various Locations</p>
+          </div>
+        </div>
+        <div class="row dc-schedule">
+          <div class="col-sm-4 text-right">
+            <h4>2:00 PM</h4>
+          </div>
+          <div class="col-sm-8">
+            <h4>Workshop Session 2</h4>
+            <p>Various Locations</p>
+          </div>
+        </div>
+        <div class="row dc-schedule">
+          <div class="col-sm-4 text-right">
+            <h4>3:00 PM</h4>
+          </div>
+          <div class="col-sm-8">
+            <h4>Networking Session</h4>
+            <p>Various Locations</p>
+          </div>
+        </div>
+        <div class="row dc-schedule">
+          <div class="col-sm-4 text-right">
+            <h4>4:00 PM</h4>
+          </div>
+          <div class="col-sm-8">
+            <h4>Closing Ceremony</h4>
+            <p>Price Center Theater</p>
           </div>
         </div>
 
@@ -136,7 +211,7 @@
 
         <div class="row text-center">
 
-         
+
           <div class="dc-card--wrapper col-md-4">
             <div class="dc-card">
               <img class="dc-card--img" src="images/temporary.png" />
