--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta property="og:title" content="Boilerplate">
   <meta property="og:description" content="Website of Boilerplate">
   <meta property="og:image" content="images/logo.png"><meta property="og:image:secure_url" content="images/logo.png">
-  <meta property="og:image:type" content="image/png"><title>Boilerplate</title>
+  <meta property="og:image:type" content="image/png"><title>Design Conference</title>
   <meta name="theme-color" content="#19A3C5">
   <meta name="description" content="Website of Boilerplate">
   <meta name="keywords" content="Keywords">
@@ -28,7 +28,7 @@
         <div class="container dc-hero--content">
           <div class="row">
             <div class="col-sm-8 col-md-6 dc-hero--content">
-              <h1>UC San Diego Design Conference</h1>
+              <h1>UC San Diego <br/>Design Conference</h1>
 
               <div class="dc-hero--description">
                 <h4>May 20, 2017</h4>
@@ -115,7 +115,7 @@
     </div>
 
 
-    <div class="section dc-section">
+    <div class="section dc-section dc-section--green">
       <div class="dc-featurette--left"><img src="images/phones1.png" /></div>
       <div class="container">
         <div class="row text-center">
@@ -201,7 +201,7 @@
       </div>
     </div>
 
-    <div class="section dc-section">
+    <div class="section dc-section dc-section--white">
       <div class="dc-featurette--right"><img src="images/phones2.png" /></div>
 
       <div class="container">
@@ -252,8 +252,8 @@
     </div>
 
 
-    <div class="section dc-section dc-faq">
-      <div class="dc-featurette--left"><img src="images/phones1.png" /></div>
+    <div class="section dc-section dc-faq dc-section--yellow">
+      <div class="dc-featurette--left second"><img src="images/phones1.png" /></div>
 
       <div class="container">
         <div class="row text-center">
