Fix some backgrounds

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="wrapper">
     <nav class="nav dc-nav">
     </nav>
-    <div class="section dc-section dc-hero">
+    <div class="section dc-hero">
       <div class="dc-hero--bg">
         <img src="images/background.png" />
       </div>
@@ -116,7 +116,6 @@
 
 
     <div class="section dc-section dc-section--green">
-      <div class="dc-featurette--left"><img src="images/phones1.png" /></div>
       <div class="container">
         <div class="row text-center">
           <h2 class="dc-section--header">Schedule</h2>
@@ -202,8 +201,6 @@
     </div>
 
     <div class="section dc-section dc-section--white">
-      <div class="dc-featurette--right"><img src="images/phones2.png" /></div>
-
       <div class="container">
         <div class="row text-center">
           <h2 class="dc-section--header">Sponsor Us</h2>
@@ -253,8 +250,6 @@
 
 
     <div class="section dc-section dc-faq dc-section--yellow">
-      <div class="dc-featurette--left second"><img src="images/phones1.png" /></div>
-
       <div class="container">
         <div class="row text-center">
           <h2 class="dc-section--header">FAQ</h2>
