--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   <div class="wrapper">
     <nav class="nav dc-nav">
     </nav>
-    <div class="section dc-hero">
+    <div class="section dc-section dc-hero">
       <div class="dc-hero--bg">
         <img src="images/background.png" />
       </div>
       <div class="dc-hero--content-wrapper">
         <div class="container dc-hero--content">
           <div class="row">
-            <div class="col-sm-8 col-md-6 dc-hero--content">
+            <div class="col-sm-8 col-md-6 dc-hero--content dc-mobile-text-center">
               <h1>UC San Diego <br/>Design Conference</h1>
 
               <div class="dc-hero--description">
@@ -249,7 +249,7 @@
     </div>
 
 
-    <div class="section dc-section dc-faq dc-section--yellow">
+    <div class="section dc-section dc-faq dc-section--blue">
       <div class="container">
         <div class="row text-center">
           <h2 class="dc-section--header">FAQ</h2>
@@ -297,29 +297,11 @@
     </div>
 
     <div class="section dc-section dc-section--bottom">
-      <div class="dc-section--bottom-bg">
-        <img src="images/background-bottom.png" />
-        <footer class="footer dc-footer">
-          <div class="dc-footer--presented">
-            <div class="row text-center">
-              <h4>Presented by:</h4>
-            </div>
-            <div class="row dc-footer--images text-center">
-              <a id="logo-designatucsd-link" href="http://designatucsd.org" target="_blank">
-                <img id="logo-designatucsd" src="images/designatucsd_logo.png" />
-              </a>
-              <a id="logo-dsp-link" href="http://www.ucsddsp.com/" target="_blank">
-                <img id="logo-dsp" src="images/dsp_logo.png" />
-              </a>
-            </div>
-          </div>
-        </footer>
-      </div>
-      <div class="container text-right dc-cta">
+      <div class="container dc-cta dc-mobile-text-center">
         <h2 class="dc-section--header">Register Now</h2>
 
         <div class="row">
-          <div class="col-sm-8 col-md-6 col-sm-offset-4 col-md-offset-6">
+          <div class="col-sm-8 col-md-6">
 
             <div class="dc-hero--description">
               <h4>May 20, 2017</h4>
@@ -330,6 +312,35 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="dc-section dc-section--footer dc-section--no-after">
+      <footer class="footer dc-footer">
+        <div class="dc-footer--presented text-left dc-mobile-text-center container">
+          <div class="col-md-6">
+            <div class="row">
+              <h4>Presented by:</h4>
+            </div>
+            <div class="row dc-footer--images text-left dc-mobile-text-center">
+              <a id="logo-designatucsd-link" href="http://designatucsd.org" target="_blank">
+                <img id="logo-designatucsd" src="images/designatucsd_logo.png" />
+              </a>
+              <a id="logo-dsp-link" href="http://www.ucsddsp.com/" target="_blank">
+                <img id="logo-dsp" src="images/dsp_logo.png" />
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 text-right">
+
+            <ul class="dc-footer--icons dc-mobile-text-center">
+              <li><a href="https://www.facebook.com/designatucsd" target="_blank"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://www.instagram.com/designatucsd/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/company-beta/17891459" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="mailto:designatucsd@gmail.com"><i class="fa fa-envelope"></i></a></li>
+          </ul>
+          </div>
+        </div>
+      </footer>
     </div>
   </div>
 
