--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <nav class="nav dc-nav">
     </nav>
     <div class="section dc-section dc-hero">
-      <div class="dc-hero--bg">
+ <!--      <div class="dc-hero--bg">
         <img src="images/background.png" />
-      </div>
+      </div> -->
       <div class="dc-hero--content-wrapper">
         <div class="container dc-hero--content">
           <div class="row">
@@ -122,7 +122,7 @@
         </div>
 
         <div class="row dc-schedule">
-          <div class="col-sm-4 text-right">
+          <div class="col-sm-4 text-right dc-mobile-text-left">
             <h4>9:00 AM</h4>
           </div>
           <div class="col-sm-8">
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="row dc-schedule">
-          <div class="col-sm-4 text-right">
+          <div class="col-sm-4 text-right dc-mobile-text-left">
             <h4>10:00 AM</h4>
           </div>
           <div class="col-sm-8">
@@ -140,7 +140,7 @@
           </div>
         </div>
         <div class="row dc-schedule">
-          <div class="col-sm-4 text-right">
+          <div class="col-sm-4 text-right dc-mobile-text-left">
             <h4>11:00 AM</h4>
           </div>
           <div class="col-sm-8">
@@ -149,7 +149,7 @@
           </div>
         </div>
         <div class="row dc-schedule">
-          <div class="col-sm-4 text-right">
+          <div class="col-sm-4 text-right dc-mobile-text-left">
             <h4>12:00 PM</h4>
           </div>
           <div class="col-sm-8">
@@ -158,7 +158,7 @@
           </div>
         </div>
         <div class="row dc-schedule">
-          <div class="col-sm-4 text-right">
+          <div class="col-sm-4 text-right dc-mobile-text-left">
             <h4>1:00 PM</h4>
           </div>
           <div class="col-sm-8">
@@ -167,7 +167,7 @@
           </div>
         </div>
         <div class="row dc-schedule">
-          <div class="col-sm-4 text-right">
+          <div class="col-sm-4 text-right dc-mobile-text-left">
             <h4>2:00 PM</h4>
           </div>
           <div class="col-sm-8">
@@ -176,7 +176,7 @@
           </div>
         </div>
         <div class="row dc-schedule">
-          <div class="col-sm-4 text-right">
+          <div class="col-sm-4 text-right dc-mobile-text-left">
             <h4>3:00 PM</h4>
           </div>
           <div class="col-sm-8">
@@ -185,7 +185,7 @@
           </div>
         </div>
         <div class="row dc-schedule">
-          <div class="col-sm-4 text-right">
+          <div class="col-sm-4 text-right dc-mobile-text-left">
             <h4>4:00 PM</h4>
           </div>
           <div class="col-sm-8">
