--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords" content="Keywords">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="shortcut icon" href="images/logo.png">
+  <link rel="shortcut icon" href="images/favicon.png">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
@@ -21,13 +21,11 @@
     <nav class="nav dc-nav">
     </nav>
     <div class="section dc-section dc-hero">
- <!--      <div class="dc-hero--bg">
-        <img src="images/background.png" />
-      </div> -->
       <div class="dc-hero--content-wrapper">
         <div class="container dc-hero--content">
           <div class="row">
             <div class="col-sm-8 col-md-6 dc-hero--content dc-mobile-text-center">
+              <img class="dc-logo" src="images/logo.png" />
               <h1>UC San Diego <br/>Design Conference</h1>
 
               <div class="dc-hero--description">
