--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
           </div>
         </div>
 
-        <div class="row text-center dc-section--button">
+        <!-- <div class="row text-center dc-section--button">
           <a class="dc-btn btn btn-primary">View Full Schedule</a>
-        </div>
+        </div> -->
       </div>
     </div>
 
