--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Boilerplate">
+  <meta property="og:title" content="UCSD Design Conference">
   <meta property="og:description" content="Website of Boilerplate">
-  <meta property="og:image" content="images/logo.png"><meta property="og:image:secure_url" content="images/logo.png">
+  <meta property="og:image" content="images/featurette.png">
+  <meta property="og:image:secure_url" content="images/featurette.png">
   <meta property="og:image:type" content="image/png"><title>Design Conference</title>
   <meta name="theme-color" content="#19A3C5">
-  <meta name="description" content="Website of Boilerplate">
+  <meta name="description" content="Website of UCSD Design Conference">
   <meta name="keywords" content="Keywords">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="shortcut icon" href="images/favicon.png">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
