Adding speaker assets

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
         <div class="row text-center">
           <div class="dc-card--wrapper col-md-4">
             <div class="dc-card">
-              <img class="dc-card--img" src="images/temporary.png" />
+              <img class="dc-card--img" src="images/micahel.jpg" />
               <div class="dc-card--body card-body">
                 <h3>Michael Meyer</h3>
+                <p>CEO - Adaptive Path</p>
                 <p>Keynote Speaker</p>
               </div>
             </div>
@@ -62,9 +63,10 @@
 
           <div class="dc-card--wrapper col-md-4">
             <div class="dc-card">
-              <img class="dc-card--img" src="images/temporary.png" />
+              <img class="dc-card--img" src="images/neema.jpg" />
               <div class="dc-card--body card-body">
                 <h3>Neema Mandavi</h3>
+                <p>Product Designer - Workday</p>
                 <p>Panelist, Workshop Leader</p>
               </div>
             </div>
@@ -72,9 +74,10 @@
 
           <div class="dc-card--wrapper col-md-4">
             <div class="dc-card">
-              <img class="dc-card--img" src="images/temporary.png" />
+              <img class="dc-card--img" src="images/nas.jpg" />
               <div class="dc-card--body card-body">
                 <h3>Nastasha Tan</h3>
+                <p>Design Lead, Interaction Design - Ideo</p>
                 <p>Panelist, Workshop Leader</p>
               </div>
             </div>
@@ -82,9 +85,10 @@
 
           <div class="dc-card--wrapper col-md-4">
             <div class="dc-card">
-              <img class="dc-card--img" src="images/temporary.png" />
+              <img class="dc-card--img" src="images/sharon.jpg" />
               <div class="dc-card--body card-body">
                 <h3>Sharon Charmichael</h3>
+                <p>Senior Interaction Design Manager - Intuit</p>
                 <p>Panelist</p>
               </div>
             </div>
@@ -92,9 +96,10 @@
 
           <div class="dc-card--wrapper col-md-4">
             <div class="dc-card">
-              <img class="dc-card--img" src="images/temporary.png" />
+              <img class="dc-card--img" src="images/oz.jpg" />
               <div class="dc-card--body card-body">
-                <h3>Sharon Charmichael</h3>
+                <h3>Oz Chen</h3>
+                <p>UX Consultant - UXBeginner.com</p>
                 <p>Panelist</p>
               </div>
             </div>
@@ -102,9 +107,10 @@
 
           <div class="dc-card--wrapper col-md-4">
             <div class="dc-card">
-              <img class="dc-card--img" src="images/temporary.png" />
+              <img class="dc-card--img" src="images/erwin.jpg" />
               <div class="dc-card--body card-body">
-                <h3>Sharon Charmichael</h3>
+                <h3>Erwin Hines</h3>
+                <p>Associate Creative Director - BASIC</p>
                 <p>Panelist</p>
               </div>
             </div>
