--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
         <div class="row text-center">
           <div class="dc-card--wrapper col-md-4">
             <div class="dc-card">
-              <img class="dc-card--img" src="images/micahel.jpg" />
+              <img class="dc-card--img" src="images/michael.png" />
               <div class="dc-card--body card-body">
                 <h3>Michael Meyer</h3>
-                <p>CEO - Adaptive Path</p>
+                <br>
                 <p>Keynote Speaker</p>
+                <br>
+                <p>Lecturer, UCSD</p>
               </div>
             </div>
           </div>
@@ -66,8 +68,10 @@
               <img class="dc-card--img" src="images/neema.jpg" />
               <div class="dc-card--body card-body">
                 <h3>Neema Mandavi</h3>
-                <p>Product Designer - Workday</p>
+                <br>
                 <p>Panelist, Workshop Leader</p>
+                <br>
+                <p>Product Designer, Workday</p>
               </div>
             </div>
           </div>
@@ -77,8 +81,10 @@
               <img class="dc-card--img" src="images/nas.jpg" />
               <div class="dc-card--body card-body">
                 <h3>Nastasha Tan</h3>
-                <p>Design Lead, Interaction Design - Ideo</p>
+                <br>
                 <p>Panelist, Workshop Leader</p>
+                <br>
+                <p>Design Lead, Ideo</p>
               </div>
             </div>
           </div>
@@ -88,8 +94,10 @@
               <img class="dc-card--img" src="images/sharon.jpg" />
               <div class="dc-card--body card-body">
                 <h3>Sharon Charmichael</h3>
-                <p>Senior Interaction Design Manager - Intuit</p>
+                <br>
                 <p>Panelist</p>
+                <br>
+                <p>Senior Interaction Design Manager, Intuit</p>
               </div>
             </div>
           </div>
@@ -99,8 +107,10 @@
               <img class="dc-card--img" src="images/oz.jpg" />
               <div class="dc-card--body card-body">
                 <h3>Oz Chen</h3>
-                <p>UX Consultant - UXBeginner.com</p>
+                <br>
                 <p>Panelist</p>
+                <br>
+                <p>UX Consultant, UXBeginner.com</p>
               </div>
             </div>
           </div>
@@ -110,8 +120,10 @@
               <img class="dc-card--img" src="images/erwin.jpg" />
               <div class="dc-card--body card-body">
                 <h3>Erwin Hines</h3>
-                <p>Associate Creative Director - BASIC</p>
+                <br>
                 <p>Panelist</p>
+                <br>
+                <p>Associate Creative Director, BASIC</p>
               </div>
             </div>
           </div>
@@ -119,7 +131,6 @@
         </div>
       </div>
     </div>
-
 
     <div class="section dc-section dc-section--green">
       <div class="container">
@@ -141,7 +152,7 @@
             <h4>10:00 AM</h4>
           </div>
           <div class="col-sm-8">
-            <h4>Keynote - Michael Meyer</h4>
+            <h4>Keynote Presentation</h4>
             <p>Price Center Theater</p>
           </div>
         </div>
@@ -187,7 +198,7 @@
           </div>
           <div class="col-sm-8">
             <h4>Networking Session</h4>
-            <p>Various Locations</p>
+            <p>Price Center Theater</p>
           </div>
         </div>
         <div class="row dc-schedule">
@@ -219,28 +230,28 @@
             <div class="dc-card">
               <img class="dc-card--img" src="images/temporary.png" />
               <div class="dc-card--body card-body">
-                <h3>Network</h3>
-                <p>Powerful web interactions and animations</p>
+                <h3>Engage</h3>
+                <p>Interact with passionate students eager to learn more about design and how it plays a role in your company</p>
               </div>
             </div>
           </div>
 
           <div class="dc-card--wrapper col-md-4">
             <div class="dc-card">
-              <img class="dc-card--img" src="images/temporary.png" />
+              <img class="dc-card--img" src="images/network.png" />
               <div class="dc-card--body card-body">
                 <h3>Network</h3>
-                <p>Powerful web interactions and animations</p>
+                <p>Meet the next generation of designers and business students eager for opportunities you have to offer</p>
               </div>
             </div>
           </div>
 
           <div class="dc-card--wrapper col-md-4">
             <div class="dc-card">
-              <img class="dc-card--img" src="images/temporary.png" />
+              <img class="dc-card--img" src="images/teach.png" />
               <div class="dc-card--body card-body">
-                <h3>Network</h3>
-                <p>Powerful web interactions and animations</p>
+                <h3>Teach</h3>
+                <p>Lead a hands-on workshop session revolving around your company's product or design process</p>
               </div>
             </div>
           </div>
@@ -249,7 +260,7 @@
         </div>
 
         <div class="row text-center dc-section--button">
-          <a class="dc-btn btn btn-primary">View Sponsorship Tiers</a>
+          <a class="dc-btn btn btn-primary" href="images/sponsorship.pdf" target="_blank">View Sponsorship Tiers</a>
         </div>
       </div>
     </div>
@@ -263,41 +274,42 @@
 
         <div class="row dc-faq--table">
           <div class="col-sm-6 dc-faq--section">
-            <h4>Why did the chicken cross the road?</h4>
+            <h4>Who can attend?</h4>
             <div class="dc-faq--text">
-              <p>Powerful web interactions and animations. A redesigned more intuitive timeline. Join us at this design conference.</p>
+              <p>All UCSD Undergraduates, Graduates, and Alumni are welcome to attend. We're also opening our conference to affliates of the UCSD design community.</p>
             </div>
           </div>
           <div class="col-sm-6 dc-faq--section">
-            <h4>Why did the chicken cross the road?</h4>
+            <h4>Do I have to pay for parking?</h4>
             <div class="dc-faq--text">
-              <p>Powerful web interactions and animations. A redesigned more intuitive timeline. Join us at this design conference.</p>
+              <p>Parking in A,B,S & V spots on campus are free on the weekends. We suggest parking in Gilman Parking Structure.</p>
             </div>
           </div>
           <div class="col-sm-6 dc-faq--section">
-            <h4>Why did the chicken cross the road?</h4>
+            <h4>What do I need to bring?</h4>
             <div class="dc-faq--text">
-              <p>Powerful web interactions and animations. A redesigned more intuitive timeline. Join us at this design conference.</p>
+              <p>Identification (Student ID Preferred) as well as a notepad to take notes!</p>
             </div>
           </div>
           <div class="col-sm-6 dc-faq--section">
-            <h4>Why did the chicken cross the road?</h4>
+            <h4>How much will the conference cost?</h4>
             <div class="dc-faq--text">
-              <p>Powerful web interactions and animations. A redesigned more intuitive timeline. Join us at this design conference.</p>
+              <p>The UC San Diego Design Conference is free of charge for all attendees!</p>
             </div>
           </div>
           <div class="col-sm-6 dc-faq--section">
-            <h4>Why did the chicken cross the road?</h4>
+            <h4>Will food be provided?</h4>
             <div class="dc-faq--text">
-              <p>Powerful web interactions and animations. A redesigned more intuitive timeline. Join us at this design conference.</p>
+              <p>Yes! Lunch will be provided and light refreshments will be available throughout the day.</p>
             </div>
           </div>
           <div class="col-sm-6 dc-faq--section">
-            <h4>Why did the chicken cross the road?</h4>
+            <h4>Where and when is the conference?</h4>
             <div class="dc-faq--text">
-              <p>Powerful web interactions and animations. A redesigned more intuitive timeline. Join us at this design conference.</p>
+              <p>The conference will be help in Price Center Theater. Registration will begin at 9am and the event will end at 5pm.</p>
             </div>
           </div>
+
         </div>
       </div>
     </div>
