--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
       </div>
     </div>
 
+    <div class="section dc-section dc-about">
+      <div class="container">
+        <div class="row text-center">
+          <div class="dc-card--wrapper col-md-8 col-md-offset-2 dc-up">
+            <div class="dc-card">
+              <h2 class="dc-section--header">About</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+      </div>
+    </div>
+
     <div class="section dc-section">
       <div class="container">
         <div class="row text-center">
@@ -132,8 +144,10 @@
       </div>
     </div>
 
-    <div class="section dc-section dc-section--green">
+    <div class="section dc-section">
       <div class="container">
+        <div class="dc-card--wrapper col-md-10 col-md-offset-1">
+        <div class="dc-card">
         <div class="row text-center">
           <h2 class="dc-section--header">Schedule</h2>
         </div>
@@ -216,6 +230,8 @@
         </div> -->
       </div>
     </div>
+  </div>
+</div>
 
     <div class="section dc-section dc-section--white">
       <div class="container">
@@ -266,8 +282,10 @@
     </div>
 
 
-    <div class="section dc-section dc-faq dc-section--blue">
+    <div class="section dc-section dc-faq">
       <div class="container">
+        <div class="dc-card--wrapper col-md-10 col-md-offset-1">
+        <div class="dc-card">
         <div class="row text-center">
           <h2 class="dc-section--header">FAQ</h2>
         </div>
@@ -276,7 +294,7 @@
           <div class="col-sm-6 dc-faq--section">
             <h4>Who can attend?</h4>
             <div class="dc-faq--text">
-              <p>All UCSD Undergraduates, Graduates, and Alumni are welcome to attend. We're also opening our conference to affliates of the UCSD design community.</p>
+              <p>All UCSD Undergraduates, Graduates, and Alumni are welcome to attend along with affiliates of the UCSD design community</p>
             </div>
           </div>
           <div class="col-sm-6 dc-faq--section">
@@ -288,11 +306,11 @@
           <div class="col-sm-6 dc-faq--section">
             <h4>What do I need to bring?</h4>
             <div class="dc-faq--text">
-              <p>Identification (Student ID Preferred) as well as a notepad to take notes!</p>
+              <p>Yourself, Resume, Identification (Student ID Preferred) as well as a notepad to take notes!</p>
             </div>
           </div>
           <div class="col-sm-6 dc-faq--section">
-            <h4>How much will the conference cost?</h4>
+            <h4>How much will it cost?</h4>
             <div class="dc-faq--text">
               <p>The UC San Diego Design Conference is free of charge for all attendees!</p>
             </div>
@@ -313,13 +331,14 @@
         </div>
       </div>
     </div>
+  </div>
+    </div>
+
+    <div class="dc-redfooter">
 
     <div class="section dc-section dc-section--bottom">
-      <div class="container dc-cta dc-mobile-text-center">
-        <h2 class="dc-section--header">Register Now</h2>
-
-        <div class="row">
-          <div class="col-sm-8 col-md-6">
+      <div class="container dc-cta text-center">
+        <h2 class="dc-section--header">Join Us!</h2>
 
             <div class="dc-hero--description">
               <h4>May 20, 2017</h4>
@@ -328,8 +347,6 @@
 
             <a class="btn btn-primary dc-btn">Register Now</a>
           </div>
-        </div>
-      </div>
     </div>
 
     <div class="dc-section dc-section--footer dc-section--no-after">
@@ -361,6 +378,7 @@
       </footer>
     </div>
   </div>
+</div>
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
