--- a/index.html
+++ b/index.html
@@ -338,11 +338,11 @@
 
     <div class="section dc-section dc-section--bottom">
       <div class="container dc-cta text-center">
-        <h2 class="dc-section--header">Join Us!</h2>
+        <h2 class="dc-section--header text-white">Join Us!</h2>
 
             <div class="dc-hero--description">
-              <h4>May 20, 2017</h4>
-              <h4>UCSD Price Center Theater</h4>
+              <h4 class="text-white">May 20, 2017</h4>
+              <h4 class="text-white">UCSD Price Center Theater</h4>
             </div>
 
             <a class="btn btn-primary dc-btn">Register Now</a>
@@ -354,24 +354,24 @@
         <div class="dc-footer--presented text-left dc-mobile-text-center container">
           <div class="col-md-6">
             <div class="row">
-              <h4>Presented by:</h4>
+              <h4 class="text-white">Presented by:</h4>
             </div>
             <div class="row dc-footer--images text-left dc-mobile-text-center">
               <a id="logo-designatucsd-link" href="http://designatucsd.org" target="_blank">
-                <img id="logo-designatucsd" src="images/designatucsd_logo.png" />
+                <img id="logo-designatucsd" src="images/designatucsd_logo_white.png" />
               </a>
               <a id="logo-dsp-link" href="http://www.ucsddsp.com/" target="_blank">
-                <img id="logo-dsp" src="images/dsp_logo.png" />
+                <img id="logo-dsp" src="images/dsp_logo_white.png" />
               </a>
             </div>
           </div>
           <div class="col-md-6 text-right">
 
             <ul class="dc-footer--icons dc-mobile-text-center">
-              <li><a href="https://www.facebook.com/designatucsd" target="_blank"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="https://www.instagram.com/designatucsd/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-              <li><a href="https://www.linkedin.com/company-beta/17891459" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="mailto:designatucsd@gmail.com"><i class="fa fa-envelope"></i></a></li>
+              <li><a href="https://www.facebook.com/designatucsd" target="_blank"><i class="fa fa-facebook text-white"></i></a></li>
+              <li><a href="https://www.instagram.com/designatucsd/" target="_blank"><i class="fa fa-instagram text-white"></i></a></li>
+              <li><a href="https://www.linkedin.com/company-beta/17891459" target="_blank"><i class="fa fa-linkedin text-white"></i></a></li>
+              <li><a href="mailto:designatucsd@gmail.com"><i class="fa fa-envelope text-white"></i></a></li>
           </ul>
           </div>
         </div>
